dashboard usuario | recomeçando do zero

--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -1,8 +1,8 @@
-<div id="homepageusuario" v-cloak>
+<div id="homepageusuario" v-cloak><br>
   <div class="container-fluid">
     <h1>Bem vindo(a), <%= me.fullName %>!</h1>
     <hr/>
-  </div>    
+  </div><br>
     
   <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
   <div class="container">  
@@ -11,9 +11,25 @@
         <h4 title="Turmas que você participa">Minhas Turmas</h4>      
       </div>
     </div>
-    <a href="#" style="font-size: 13px;">Criar turma</a> 
-      
+    <a href="#" style="font-size: 13px;">Gerenciar</a> 
+              
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+------------------------------------------------------------------------------------------------------    
     <!--CAROUSEL STARTS HERE-->
     <div id="myCarousel" class="carousel slide" data-interval="false">               
       <div class="carousel-inner row w-100 mx-auto">          
@@ -74,8 +90,7 @@
           </div>
         </div>
           
-      </div>    
-    
+      </div>        
       <!--LEFT/RIGHT CONTROLS-->
       <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -86,8 +101,8 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
-  </div>    
-   
+  </div>
+   --------------------------------------------------------------------------
   <div class="container">
     <div class="row">
       <!--JOGOS QUE O USUARIO SALVOU-->  
@@ -96,50 +111,50 @@
       </div>  
       <!--SE ESTIVER COM O PERFIL DE USUARIO, PODE EDITAR OU REMOVER JOGOS-->
     </div>
-    <a href="#" style="font-size: 13px;">Ver todos</a>  
+    <a href="#" style="font-size: 13px;">Gerenciar</a>  
   </div>
-******
+
   <div id="myCarousel" class="carousel slide" data-interval="false">               
     <div class="carousel-inner row w-100 mx-auto">          
 
       <div class="carousel-item col-sm-3 active">
-        <div class="card m-3">
-          <div class="card-header">Turma 1</div>
+        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
+          <div class="card-header">Jogo 1</div>
           <div class="card-body">Descrição</div>
         </div>
       </div>
 
       <div class="carousel-item col-sm-3 active">
-        <div class="card m-3">
-          <div class="card-header">Turma 1</div>
+        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
+          <div class="card-header">Jogo 2</div>
           <div class="card-body">Descrição</div>
         </div>
       </div>
 
       <div class="carousel-item col-sm-3 active">
-        <div class="card m-3">
-          <div class="card-header">Turma 1</div>
+        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
+          <div class="card-header">Jogo 3</div>
           <div class="card-body">Descrição</div>
         </div>
       </div>
 
       <div class="carousel-item col-sm-3 active">
-        <div class="card m-3">
-          <div class="card-header">Turma 1</div>
+        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
+          <div class="card-header">Jogo 4</div>
           <div class="card-body">Descrição</div>
         </div>
       </div>
 
       <div class="carousel-item col-sm-3 active">
-        <div class="card m-3">
-          <div class="card-header">Turma 1</div>
+        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
+          <div class="card-header">Jogo 5</div>
           <div class="card-body">Descrição</div>
         </div>
       </div>
 
       <div class="carousel-item col-sm-3 active">
-        <div class="card m-3">
-          <div class="card-header">Turma 6</div>
+        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
+          <div class="card-header">Jogo 6</div>
           <div class="card-body">Descrição</div>
         </div>
       </div>
