dashboard usuario | refazendo

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -19,9 +19,9 @@
     <!--STYLES-->
     <link rel="stylesheet" href="/dependencies/bootstrap-4/bootstrap-4.css">
     <link rel="stylesheet" href="/dependencies/font-awesome-4/css/font-awesome.css">
-    <link rel="stylesheet" href="/styles/homepageusuario.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!--STYLES END-->
   </head>
 
