--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -5,41 +5,24 @@
   </div><br>
     
   <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
-  <div class="container">  
+  <div class="container">
+    
     <div class="row">
       <div  class="col-sm-10">
-        <h4 title="Turmas que você participa">Minhas Turmas</h4>      
+        <h4 title="Turmas que você participa">Minhas Turmas</h4>
       </div>
     </div>
-    <a href="#" style="font-size: 13px;">Gerenciar</a> 
-              
+    <a href="#" style="font-size: 13px;">Gerenciar</a>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-------------------------------------------------------------------------------------------------------    
     <!--CAROUSEL STARTS HERE-->
-    <div id="myCarousel" class="carousel slide" data-interval="false">               
-      <div class="carousel-inner row w-100 mx-auto">          
-
+    <div id="myCarousel" class="carousel slide" data-interval="false">      
+      <div class="carousel-inner row w-100 mx-auto">        
         <div class="carousel-item col-sm-3 active">
           <div class="card m-3">
             <div class="card-header">Turma 1</div>
             <div class="card-body">Descrição</div>
           </div>
-        </div>      
+        </div>
 
         <div class="carousel-item col-sm-3">
           <div class="card m-3">
@@ -47,7 +30,7 @@
             <div class="card-body">Descrição</div>
           </div>
         </div>
-                  
+
         <div class="carousel-item col-sm-3">
           <div class="card m-3">
             <div class="card-header">Turma 3</div>
@@ -80,7 +63,7 @@
           <div class="card m-3">
             <div class="card-header">Turma 7</div>
             <div class="card-body">Descrição</div>
-          </div>
+          </div>          
         </div>
 
         <div class="carousel-item col-sm-3">
@@ -89,26 +72,33 @@
             <div class="card-body">Descrição</div>
           </div>
         </div>
-          
-      </div>        
-      <!--LEFT/RIGHT CONTROLS-->
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+      </div> <!--div carousel inner-->
+
+      <!--LEFT AND RIGHT CONTROLS-->
+      <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+      <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
-    </div>
-  </div>
+    </div> <!--div id-->
+  </div> <!--Div do container-->
+  <!--end of carousel-->
+
+
+
+
+
+
    --------------------------------------------------------------------------
   <div class="container">
     <div class="row">
       <!--JOGOS QUE O USUARIO SALVOU-->  
       <div class="col-sm-10">
         <h4 title="Jogos salvos">Meus jogos</h4>
-      </div>  
+      </div>
       <!--SE ESTIVER COM O PERFIL DE USUARIO, PODE EDITAR OU REMOVER JOGOS-->
     </div>
     <a href="#" style="font-size: 13px;">Gerenciar</a>  
