dashboard usuario | html minhas turmas ok

--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -5,8 +5,7 @@
   </div><br>
     
   <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
-  <div class="container">
-    
+  <div class="container">    
     <div class="row">
       <div  class="col-sm-10">
         <h4 title="Turmas que você participa">Minhas Turmas</h4>
@@ -85,104 +84,4 @@
       </a>
     </div> <!--div id-->
   </div> <!--Div do container-->
-  <!--end of carousel-->
-
-
-
-
-
-
-   --------------------------------------------------------------------------
-  <div class="container">
-    <div class="row">
-      <!--JOGOS QUE O USUARIO SALVOU-->  
-      <div class="col-sm-10">
-        <h4 title="Jogos salvos">Meus jogos</h4>
-      </div>
-      <!--SE ESTIVER COM O PERFIL DE USUARIO, PODE EDITAR OU REMOVER JOGOS-->
-    </div>
-    <a href="#" style="font-size: 13px;">Gerenciar</a>  
-  </div>
-
-  <div id="myCarousel" class="carousel slide" data-interval="false">               
-    <div class="carousel-inner row w-100 mx-auto">          
-
-      <div class="carousel-item col-sm-3 active">
-        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
-          <div class="card-header">Jogo 1</div>
-          <div class="card-body">Descrição</div>
-        </div>
-      </div>
-
-      <div class="carousel-item col-sm-3 active">
-        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
-          <div class="card-header">Jogo 2</div>
-          <div class="card-body">Descrição</div>
-        </div>
-      </div>
-
-      <div class="carousel-item col-sm-3 active">
-        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
-          <div class="card-header">Jogo 3</div>
-          <div class="card-body">Descrição</div>
-        </div>
-      </div>
-
-      <div class="carousel-item col-sm-3 active">
-        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
-          <div class="card-header">Jogo 4</div>
-          <div class="card-body">Descrição</div>
-        </div>
-      </div>
-
-      <div class="carousel-item col-sm-3 active">
-        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
-          <div class="card-header">Jogo 5</div>
-          <div class="card-body">Descrição</div>
-        </div>
-      </div>
-
-      <div class="carousel-item col-sm-3 active">
-        <div class="card m-3" title="Clique para ver detalhes sobre o jogo">
-          <div class="card-header">Jogo 6</div>
-          <div class="card-body">Descrição</div>
-        </div>
-      </div>
-          
-    </div>
-
-
-
-    --------------------------------------------------------------------------
-
-    <div class="row">    
-      <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
-        <div class="card-header">Nome do jogo</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
-        <div class="card-header">Nome do jogo</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
-        <div class="card-header">Nome do jogo</div>
-        <div class="card-body">Descrição</div>
-      </div>    
-    </div>
-    <div class="row">
-      <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
-        <div class="card-header">Nome do jogo</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
-        <div class="card-header">Nome do jogo</div>
-        <div class="card-body">Descrição</div>
-      </div>
-      <div title="Clique para ver detalhes sobre o jogo" class="card m-3">
-        <div class="card-header">Nome do jogo</div>
-        <div class="card-body">Descrição</div>
-      </div>
-    </div>
-  </div>
-</div>  
-<%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
+  <!--END OF FIRST CAROUSEL-->
