dashboard usuario | html ok

--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -85,3 +85,87 @@
     </div> <!--div id-->
   </div> <!--Div do container-->
   <!--END OF FIRST CAROUSEL-->
+
+  ****************************************************************************************
+
+  <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
+  <div class="container">    
+      <div class="row">
+        <div  class="col-sm-10">
+          <h4 title="Turmas que você participa">Meus jogos</h4>
+        </div>
+      </div>
+      <a href="#" style="font-size: 13px;">Gerenciar</a>
+  
+      <!--CAROUSEL STARTS HERE-->
+      <div id="myCarousel" class="carousel slide" data-interval="false">      
+        <div class="carousel-inner row w-100 mx-auto">        
+          <div class="carousel-item col-sm-3 active">
+            <div class="card m-3">
+              <div class="card-header">Jogo 1</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 2</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 3</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 4</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 5</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 6</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 7</div>
+              <div class="card-body">Descrição</div>
+            </div>          
+          </div>
+  
+          <div class="carousel-item col-sm-3">
+            <div class="card m-3">
+              <div class="card-header">Jogo 8</div>
+              <div class="card-body">Descrição</div>
+            </div>
+          </div>
+        </div> <!--div carousel inner-->
+  
+        <!--LEFT AND RIGHT CONTROLS-->
+        <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div> <!--div id-->
+    </div> <!--Div do container-->
+    <!--END OF FIRST CAROUSEL-->  
