--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -14,7 +14,7 @@
     <a href="#" style="font-size: 13px;">Gerenciar</a>
 
     <!--CAROUSEL STARTS HERE-->
-    <div id="myCarousel" class="carousel slide" data-interval="false">      
+    <div id="myCarousel-1" class="carousel slide" data-interval="false">      
       <div class="carousel-inner row w-100 mx-auto">        
         <div class="carousel-item col-sm-3 active">
           <div class="card m-3">
@@ -74,11 +74,11 @@
       </div> <!--div carousel inner-->
 
       <!--LEFT AND RIGHT CONTROLS-->
-      <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+      <a href="#myCarousel-1" class="carousel-control-prev" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </a>
-      <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+      <a href="#myCarousel-1" class="carousel-control-next" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
       </a>
@@ -98,7 +98,7 @@
       <a href="#" style="font-size: 13px;">Gerenciar</a>
   
       <!--CAROUSEL STARTS HERE-->
-      <div id="myCarousel" class="carousel slide" data-interval="false">      
+      <div id="myCarousel-2" class="carousel slide" data-interval="false">      
         <div class="carousel-inner row w-100 mx-auto">        
           <div class="carousel-item col-sm-3 active">
             <div class="card m-3">
@@ -158,11 +158,11 @@
         </div> <!--div carousel inner-->
   
         <!--LEFT AND RIGHT CONTROLS-->
-        <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+        <a href="#myCarousel-2" class="carousel-control-prev" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+        <a href="#myCarousel-2" class="carousel-control-next" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
