dashboard usuario | css em andamento

--- a/assets/styles/pages/homepageusuario.less
+++ b/assets/styles/pages/homepageusuario.less
@@ -14,7 +14,8 @@
     /* show 3 items */
     .carousel-inner .active,
     .carousel-inner .active + .carousel-item,
-    .carousel-inner .active + .carousel-item + .carousel-item {
+    .carousel-inner .active + .carousel-item + .carousel-item,
+    .carousel-inner .active + .carousel-item + .carousel-item + .carousel-item {
       display: block;
     }
   
