dashboard usuario | html ok

--- a/views/pages/homepageusuario.ejs
+++ b/views/pages/homepageusuario.ejs
@@ -84,15 +84,13 @@
       </a>
     </div> <!--div id-->
   </div> <!--Div do container-->
-  <!--END OF FIRST CAROUSEL-->
-
-  ****************************************************************************************
-
-  <!--TURMAS EM QUE O USUÁRIO ESTÁ APARECERIAM AQUI-->
+  <!--END OF FIRST CAROUSEL-->  
+<br>
+  <!--JOGOS QUE O USUARIO SALVOU COMO "FAVORITOS"-->
   <div class="container">    
       <div class="row">
         <div  class="col-sm-10">
-          <h4 title="Turmas que você participa">Meus jogos</h4>
+          <h4 title="Jogos salvos">Meus jogos</h4>
         </div>
       </div>
       <a href="#" style="font-size: 13px;">Gerenciar</a>
