--- a/views/pages/sgddedu/editor.ejs
+++ b/views/pages/sgddedu/editor.ejs
@@ -15,7 +15,7 @@
   
   <div class="conteiner">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-3">
     
           <form action="Sgddedu/create" method="GET">
            <input v-model="titulo" name="titulo" placeholder="Titulo"><br>
@@ -27,7 +27,7 @@
             
          </form>  
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-6">
          <h1>Titulo:{{ titulo }}</h1>
          <h4><i>Autor(a):<%= me.fullName %></i></h4>
          <h3>Historia</h3>
@@ -39,9 +39,9 @@
       
         <div class="col-sm-3">
  
-<button onclick="appendText(1)">jogo</button>
-<button onclick="appendText(2)">arte</button>
-<button onclick="appendText(3)">audio</button>
+<button v-on:click="appendText(1)">programação</button>
+<button v-on:click="appendText(2)">arte</button>
+<button v-on:click="appendText(3)">audio</button>
     
       <div class="col-sm-12" >
       
@@ -60,7 +60,7 @@
           <div class="panel-group">
             <div class="panel panel-default" >
               <div class="panel-heading" style="background-color: Yellow">Arte</div>
-              <div id="arte" class="panel-body"> </div>
+              <div id="arte" class="panel-body">  </div>
             </div>
   	     </div>
      </div>
@@ -89,85 +89,16 @@
       </div>
   </div>  
   </body>
-<script type="application/javascript">
-function opcao(n){
- 
-  if(n == 1){
-    return "programacao";
-  } else
-  if(n == 2){
-    return "arte";
-  } else
-  if(n == 3){
-    return "ad"
-  }
-} 
-
-  
-function getSelected() {
-    if (window.getSelection) {
-        return window.getSelection();
-    }
-    else if (document.getSelection) {
-        return document.getSelection();
-    }
-    else {
-        var selection = document.selection && document.selection.createRange();
-        if (selection.text) {
-            return selection.text;
-        }
-        return false;
-    }
-    return false;
-}
-
-function appendText(opc) {
-    var str= opcao(opc);
-    var txt3 = document.createElement("p");
-  // grifar(txt3);
-    getSelectionHtml(str);
-    txt3.innerHTML = "[ ]  " + getSelected() + ";" ;               // Create text with DOM
-    $("#"+str).append(txt3);     // Append new elements
-}
+      
+<script>
 
 
-function getSelectionHtml(identidade) {
-   var sel, range, node;
-    if (window.getSelection) {
-        sel = window.getSelection();
-        if (sel.getRangeAt && sel.rangeCount) {
-            range = window.getSelection().getRangeAt(0);
-            if(identidade =="programacao"){
-            var textohtml = '<span style="background-color:cyan;">' + range + '</span>';
-            }
-            else if(identidade== "arte"){
-            var textohtml = '<span style="background-color:yellow;">' + range + '</span>';
-            }
-            else if(identidade == "ad"){
-            var textohtml = '<span style="background-color:lime;">' + range + '</span>';
-            }
-            range.deleteContents();
-            
-            var el = document.createElement("div");
-            el.innerHTML = textohtml;
-            var frag = document.createDocumentFragment(), node, lastNode;
-            while ( (node = el.firstChild) ) {
-                lastNode = frag.appendChild(node);
-            }
-            range.insertNode(frag);
-        }
-    } else if (document.selection && document.selection.createRange) {
-        range = document.selection.createRange();
-        range.collapse(false);
-        range.pasteHTML(textohtml);
-    }
-}
 
-function removeLista(identidade) {
-  var html_2 = "";
-  document.getElementById(identidade).innerHTML = html_2;
+    
 
-}
-</script>
+
+
+</script>    
+
 
 <%- /* Expose server-rendered data as window.SAILS_LOCALS :: */ exposeLocalsToBrowser() %>
