Adicionada função de enviar jogo. O jogo já será salvo dentro da pagina Games/nome_do_jogo

--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -40,4 +40,5 @@
 @import 'pages/sgddedu/editor.less';
 @import 'pages/paginadeperfil.less';
 @import 'pages/turmas.less';
-@import 'pages/nav.less';
+
+@import 'pages/sendgame.less';
