--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -59,7 +59,7 @@
         </div>
       </header>
       <% if(me) { %>
-      <div class="sidenav col-2">
+      <div class="sidenav col-md-2">
         <a href="#about">Home</a>
         <a href="#">Tabela</a>
         <a href="../turmas">Turmas 
@@ -85,9 +85,13 @@
         </div>
       </div>
       <% } %>
-
+      <% if (me) { %>
+      <div class="col-md-10 offset-md-2">
       <%- body %>
-
+      </div>
+      <% } else{ %>
+      <%- body %>
+      <% } %>
       <footer id="page-footer" class="navbar navbar-light justify-content-between flex-row-reverse">
         <div class="nav">
           <small class="nav-item"><a class="nav-link text-info" href="/contact">Contact<span class="d-none d-sm-inline"> us</span></a></small>
@@ -150,6 +154,7 @@
     <script src="/js/pages/legal/terms.page.js"></script>
     <script src="/js/pages/nav.page.js"></script>
     <script src="/js/pages/paginadeperfil.page.js"></script>
+    <script src="/js/pages/sendgame.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
     <script src="/js/pages/sobre.page.js"></script>
     <script src="/js/pages/turmas.page.js"></script>
