--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -155,9 +155,9 @@
     <script src="/js/pages/iniciodesenvolvedor.page.js"></script>
     <script src="/js/pages/legal/privacy.page.js"></script>
     <script src="/js/pages/legal/terms.page.js"></script>
-    <script src="/js/pages/nav.page.js"></script>
     <script src="/js/pages/paginadeperfil.page.js"></script>
     <script src="/js/pages/sendgame.page.js"></script>
+    <script src="/js/pages/sendGame.page.js"></script>
     <script src="/js/pages/sgddedu/editor.page.js"></script>
     <script src="/js/pages/sobre.page.js"></script>
     <script src="/js/pages/turmas.page.js"></script>
