--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -29,7 +29,7 @@
                 <!-- ** LEMBRETE ** 
                 Gerar codigo automaticamente -->
                 <input type="hidden" name="_csrf" value="<%- _csrf %>" />
-                <button type="submit" onclick="" class="btn btn-primary">Save changes</button>
+                <button type="submit" class="btn btn-primary">Save changes</button>
               </form>
             </div>
             <div class="modal-footer">
