--- a/views/pages/turmas.ejs
+++ b/views/pages/turmas.ejs
@@ -29,7 +29,7 @@
                 <!-- ** LEMBRETE ** 
                 Gerar codigo automaticamente -->
                 <input type="hidden" name="_csrf" value="<%- _csrf %>" />
-                <button type="submit" class="btn btn-primary">Save changes</button>
+                <button type="submit" onclick="" class="btn btn-primary">Save changes</button>
               </form>
             </div>
             <div class="modal-footer">
@@ -66,8 +66,6 @@
  •- api/controllers/view-turmas.js
  •- assets/styles/pages/turmas.less
  •- assets/js/pages/turmas.page.js
-
 <h1>TODO: Implement this page.</h1>
   <p>(See also <em>assets/styles/pages/turmas.less</em>, <em>assets/js/pages/turmas.page.js</em>, and <em>api/controllers/view-turmas.js</em>.)</p>
-
 -->
